kube-nexus-pi-deploy-metadata.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus

---
# https://kubernetes.io/es/docs/concepts/workloads/controllers/deployment/
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - image: jmmirand/nexus3-kube-pi:3.25.0
        imagePullPolicy: Always
        name: nexus
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
          - mountPath: /nexus-data
            name: nexus-data-volume
      volumes:
        - name: nexus-data-volume
          persistentVolumeClaim:
            claimName: nexus-pvc

---


apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker
  selector:
    app: nexus
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nexus.192.168.1.11.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 80
  - host: docker.192.168.1.11.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 5000
